--- a/index.html
+++ b/index.html
@@ -8,10 +8,61 @@
     </head>
     <body>
         <header>
+            <!-- titolo e immagini -->
             <h1>Il mio viaggio a Londra</h1>
             <img src="./img/pexels1.jpg" alt="">
             <img src="./img/pexels2.jpg" alt="">
             <img src="./img/pexels3.jpg" alt="">
         </header>
+
+        <hr>
+
+        <main>
+            <!-- spese -->
+            <section>
+
+                <h2>Le mie spese</h2>
+
+                <!-- tabella costi -->
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Numero</th>
+                            <th>Descrizione</th>
+                            <th>Costo</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120&euro;</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120&euro;</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120&euro;</td>
+                        </tr>
+
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <td>Totale</td>
+                            <td></td>
+                            <td>360&euro;</td>
+                        </tr>
+                    </tfoot>
+
+                </table>
+                
+            </section>
+        </main>
     </body>
     </html>
