--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <h3>Cose da fare</h3>
 
                 <ul>
-                    <li>Visitare la Tower of London &check;</li>
-                    <li>Visitare greenwich &cross;</li>
-                    <li>Ascoltare un artista di strada a Covent Garden &cross;</li>
-                    <li>Mangiare il tipico Fish and Chips inglese &check;</li>
+                    <li>Visitare la Tower of London &cross;</li>
+                    <li>Visitare greenwich &check;</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
                 </ul>
 
             </section>
@@ -125,6 +125,17 @@
             </section>
 
             <hr>
+ 
+            <!-- foto -->
+            <section>
+
+                <h3>Foto</h3>
+
+                <img src="./img/ponte.jpeg" alt="">
+                <img src="./img/galleria.jpeg" alt="">
+
+            </section>
+
         </main>
     </body>
     </html>
